--- a/genetic_algorithem_BTC.ipynb
+++ b/genetic_algorithem_BTC.ipynb
@@ -6,7 +6,7 @@
       "name": "genetic_algorithem_BTC.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcDeAr8JgFtFgu71Qw+jh+",
+      "authorship_tag": "ABX9TyMEfBQj1FGeLjzfTxJctdq+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,7 +133,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Create poputlation"
+        "##Create genetic algo function"
       ],
       "metadata": {
         "id": "aatKGxQHQjZ_"
@@ -184,15 +184,6 @@
       },
       "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## genetic algo process"
-      ],
-      "metadata": {
-        "id": "PMOVTGdUOdiz"
-      }
     },
     {
       "cell_type": "code",
@@ -248,7 +239,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##create environment"
+        "##create environment (BTC price between '2019-01-01' and '2021-01-01')"
       ],
       "metadata": {
         "id": "IpqPissziQW1"
@@ -862,7 +853,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 639
+          "height": 799
         },
         "id": "jUwdXF-KvyKk",
         "outputId": "3db3174d-aedd-4d8e-8ab4-dc748ed6fe5c"
@@ -898,6 +889,26 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##create test env (BTC price between '2020-12-16' and  '2022-01-01')"
+      ],
+      "metadata": {
+        "id": "jLd4zFJN3W-e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#note i use '2020-12-16' because best_genetic[1] is 17 that mean it need 17 days before 2021 to create EMA "
+      ],
+      "metadata": {
+        "id": "rzsIoD543map"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
